# plugin-launcher

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  Makefile  README.md  init.sh  plugin.toml  run.sh
.github/workflows/: release.yml
backends/: linux.sh  macos.sh  update-dbs.sh  windows.ps1
src/: main.rs
tests/: test_linux_backend.sh
ui/: app.js  index.html  style.css
webview/: style.css
