[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
description = "Universal search launcher with action modifiers"
license = "MIT"

[dependencies]
wry = "0.47"
tao = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
dirs = "5.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
